--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/three": "^9.5.5",
+    "@react-three/drei": "^9.45.0",
+    "@react-three/fiber": "^8.9.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.5.5",
+    "styled-components": "^5.3.6",
+    "three": "^0.146.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
